added appearance to just primary button

--- a/main-styles.css
+++ b/main-styles.css
@@ -71,6 +71,9 @@ footer {
   font-weight: 200;
   text-transform: uppercase;
   letter-spacing: 2px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .secondary-btn {
