--- a/main-styles.css
+++ b/main-styles.css
@@ -150,6 +150,7 @@ button.resume-btn:before {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-repeat: no-repeat;
+  -webkit-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -162,11 +163,17 @@ button.resume-btn:before {
   padding-top: 2rem;
   padding-bottom: 2rem;
   position: absolute;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: column;
   flex-direction: column;
+  -webkit-align-content: center;
   align-content: center;
+  -webkit-align-items: center;
   align-items: center;
+  -webkit-justify-content: center;
   justify-content: center;
+  -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
