--- a/main-styles.css
+++ b/main-styles.css
@@ -551,7 +551,7 @@ section#resume div.card {
 
 /********* Media Viewport Settings **********/
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 576px) {
 
   footer {
     padding-top: 12px;
@@ -603,19 +603,24 @@ section#resume div.card {
   .top-hero-container {
   background-attachment: initial;
   }
-  
+
+  .download-resume-container {
+    background-attachment: initial;
+    height: 70vh;
+  }
+
   .download-resume-container-overlay {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-attachment: initial;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    height: 70vh;
+}
+
 }
 
 @media (max-width: 767.98){
-
-  @media (max-width: 767.98){
   .about-me-row {
     display: flex;
     flex-direction: column;
   }
- 
+
 }
