--- a/main-styles.css
+++ b/main-styles.css
@@ -612,6 +612,7 @@ section#resume div.card {
   
   .top-hero-container {
   background-attachment: initial;
+  transform: scale(101%);
   }
 
   .about-me-row {
