--- a/main-styles.css
+++ b/main-styles.css
@@ -226,6 +226,7 @@ button.resume-btn:before {
   padding-bottom: 100px;
   background-image: url('images/white-texture-background.jpg');
   background-repeat: no-repeat;
+  -webkit-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -609,11 +610,16 @@ section#resume div.card {
 }
 
 @media screen and (max-width: 768px){
-  
+
   .top-hero-container {
   background-attachment: initial;
   width: 100%;
   }
+
+  #about-me {
+  background-attachment: initial;
+  }
+
 
   .about-me-row {
     display: flex;
