--- a/main-styles.css
+++ b/main-styles.css
@@ -633,7 +633,7 @@ section#resume div.card {
   }
 
   .portfolio-row-bottom {
-    padding-bottom: 0;
+    padding-bottom: 25px;
   }
 
   .download-resume-container {
